--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,10 +1,30 @@
 ---
 general:
+  pipeline: 'sap-cloud-sdk'    # this line is mandatory
   buildTool: "mta"
 
+  # Stages configuration
+stages:
+  Build:
+    npmExecuteLint: false               # true, if you want to run a lint check that verifies the syntax of your JavaScript code
+
+  Additional Unit Tests:
+    npmExecuteScripts: false
+    
+  Release:
+    cloudFoundryDeploy: true   # true, if you want to deploy to Cloud Foundry. If you set this parameter to true, the CloudFoundryDeploy step is mandatory
+    tmsUpload: false            # true if you want to upload your artifact to SAP Cloud Transport Management. If you set this parameter to true, the tmsUpload step is mandatory
+
+# Steps configuration
 steps:
+
+  npmExecuteLint:
+    failOnError: false    # true, if you want your pipeline to fail, if the lint check reveals any errors
+
   mtaBuild:
-    platform: 'CF'
+    buildTarget: "CF"
+    mtaBuildTool: "cloudMbt"
+  
   cloudFoundryDeploy:
     apiEndpoint: "https://api.cf.ap10.hana.ondemand.com"
     org: "secondphase"
