--- a/.github/workflows/build-cloud-foundry.yml
+++ b/.github/workflows/build-cloud-foundry.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           command: mtaBuild
       - name: cloudFoundryDeploy
-        uses: SAP/project-piper-action@master
+        uses: SAP/project-piper-action@install-cf-cli
         with:
           command: cloudFoundryDeploy
           piper-version: master
