--- a/.github/workflows/build-cloud-foundry.yml
+++ b/.github/workflows/build-cloud-foundry.yml
@@ -33,9 +33,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: self-hosted
-    environment: 
-      name: dev
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
